--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,112 @@
 #root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
+  position: relative;
+
+body {
+  margin: 0;
+  padding: 0;
 }
+
+.site-title {
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  color: #fff;
+  gap: 2rem;
+  padding: 0 1 rem ;
+}
+
+.nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0.5 rem;
+  gap: 1rem;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.nav-logo {
+  width: 50px;
+  height: 50px;
+}
+
+nav h1{
+  margin: 0;
+  margin-right: 50px;
+  color: #fff;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+nav .nav-menu {
+  display: none;
+  position: absolute;
+  top: 5rem;
+  right: 15px;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 2.25rem;
+  height: 1.5rem;
+  cursor: pointer;
+}
+
+nav .nav-menu span {
+  height: 0.45rem;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 0.2rem;
+  transition: all 0.5s;}
+
+  @media (max-width: 500px) {
+    nav .nav-menu {
+      display: flex;
+    }
+
+    nav{
+      flex-direction: column;
+      align-items: start;
+    }
+
+    .nav ul {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      align-items: start;
+      margin-bottom: 0.25rem;
+    }
+
+    nav ul.open {
+      display: flex;
+    }
+    
+  }
 
 button {
  margin-top: auto;
+  border: 0;
+  width: 40%;
+}
+.CircularProgressbar {
+  margin-top: 20px;
+  background-color: transparent;
+  color: rgb(2, 99, 2);
   border: 0;
   width: 40%;
 }
@@ -57,41 +157,126 @@ button.Restartbutton {
   border: 0;
   width: 40%;
 }
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.post_container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10rem;
+  padding: 1rem;
+  justify-content: center;
+  margin-right: 40px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post{
+  background-color: green;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-h1{
+.post_content{
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: #fff;
+  font-weight: lighter;
+  font-size: 1rem;
   text-align: center;
 }
+
+.post_content h3{
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.thumbnail{
+max-width: auto;
+height: auto;
+}
+.banner{
+  width: 100%;
+  height: auto; 
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.why {
+
+  text-align: center;
+   margin : 100px;
+   padding: auto;
+   font-weight: lighter;
+   font-size: 1.2rem;
+   color: #fff;
+}
+
+.what{
+  text-align: center;
+   margin : 100px;
+   padding: auto;
+   font-weight: lighter;
+   font-size: 1.2rem;
+   color: #fff;
+}
+.end {
+  text-align: center;
+   margin : 100px;
+   padding: auto;
+   font-weight: lighter;
+   font-size: 1.2rem;
+   color: #fff;
+  }
+ 
+  footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+  }
+  .footer-text {
+    text-align: center;
+    margin-bottom : 75px;
+    padding: auto;
+    font-weight: lighter;
+    font-size: 1.2rem;
+    color: #fff;
+  }
+
+
+  .social-button a {
+    background-color: transparent;
+    color: whitesmoke;
+    padding: 20px;
+    border: 15px;
+    border-radius: 40px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 100px;
+  }
+
+  .message-box {
+    width: 100%;
+    height: 200px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+  }
+  
+  .contact-form{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    margin: 50px;
+    padding: 30px;
+    resize: none;
+  }
