--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
   text-align: center;
   box-sizing: border-box;
-  position: relative;
+  position: relative;}
 
 body {
   margin: 0;
