--- a/src/App.css
+++ b/src/App.css
@@ -201,7 +201,7 @@ height: auto;
 }
 .banner{
   width: 100%;
-  max-height: 90%; 
+  max-height: 150px; 
   border-radius: 20px;
   margin-bottom: 20px;
 }
