--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ body {
 }
 
 .nav-logo {
+  margin-right: 3rem;
   width: 50px;
   height: 50px;
 }
@@ -107,12 +108,12 @@ button {
   border: 0;
   width: 40%;
 }
-.CircularProgressbar {
-  margin-top: 20px;
-  background-color: transparent;
-  color: rgb(2, 99, 2);
-  border: 0;
-  width: 40%;
+
+.timerdiv {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 button.Playbutton {
   margin-top: 20px;
@@ -244,6 +245,7 @@ height: auto;
     height: 2.5rem;
   }
   .footer-text {
+    margin-top: 50px;
     text-align: center;
     margin-bottom : 75px;
     padding: auto;
@@ -278,11 +280,75 @@ height: auto;
   .contact-form{
     display: flex;
     justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+    padding: 15px;
+    resize: none;
+  }
+
+  .form-name {
+    min-width: 150px;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+    padding: 15px;
+    resize: none;
+  }
+
+  .form-email {
+    min-width: 150px;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px;
+    padding: 15px;
+    resize: none;
+  }
+
+  .form-message{
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 15px;
+    resize: none;
+  }
+
+  .form-textarea{
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 15px;
+    resize: none;
+  }
+
+  .form-send
+{
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
     align-items: center;
     flex-direction: column;
     margin: 50px;
     padding: 30px;
     resize: none;
   }
+
 
   
