--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   background-color: #242424;}
 
 body {
+  background-color: #242424;
   margin: 0;
   padding: 0;
 }
@@ -238,9 +239,13 @@ height: auto;
    color: #fff;
   }
  
-  footer{
-    position: absolute; 
-    bottom: 10px;
+  .footer{
+    background-color: #333;
+    position: flex;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
     width: 100%;
     height: 2.5rem;
   }
@@ -254,17 +259,26 @@ height: auto;
     color: #fff;
   }
 
-
+  .social-button {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom : 75px;
+    padding: auto;
+    font-weight: lighter;
+    font-size: 1.2rem;
+    color: #fff;
+  }
   .social-button a {
-    background-color: transparent;
-    color: whitesmoke;
+    background-color: #242424;
+    color: #fff;
+    text-decoration: none;
+    font-size: 2rem;
     padding: 20px;
     border: 15px;
     border-radius: 40px;
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 100px;
   }
 
 
@@ -291,6 +305,8 @@ height: auto;
   }
 
   .form-name, .form-email, .form-message, .form-send {
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
